Added new favicon and more

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,6 +190,9 @@ input, textarea {
 .linkedin-link {
   color: #007bb6; }
 
+.github-link {
+  color: #007bb6; }
+
 .color-text {
   color: #54a1bc; }
 
